MonetDB5/tests/suite_01/Tests/test_05.mal
# Monet Mil to Mal compiler
# Copyright (c) 2001-2004, CWI. All rights reserved.

#Predefined code segment
#The compiler can not guarantee an accurate compilation,
#because MIL unlike MAL is a dynamically typed language.
#A few guidelines to maximize usefullness.
#- make the type of variables explicit, in particular 'nil'
#- upon advice of M2m to remap identifiers, change it in your program directly
#include "mil_prelude";
	mil.line("setoid(oid(20000000));");
	aa_a := oid(20000000);
	ba_a := setoid(aa_a);
	mil.line("# escape sequences\n");
	mil.line("# first some basics, escaped characters are normalized");
	mil.line("# first some basics, escaped characters are normalized\n");
	mil.line("");
	mil.line("print(\"got single quote \\' .\");\t# remove superfluous escapes");
	ca_a := print("got single quote \' .");
	mil.line("# remove superfluous escapes\n");
	mil.line("print(\"got single quote ' without escape\");");
	da_a := print("got single quote ' without escape");
	mil.line("print(\"got tab \\t and single newline \\n .\");");
	ea_a := print("got tab \t and single newline \n .");
!ERROR: ""
!        ^
! syntax error, unexpected $undefined, expecting ')' or ','.
